# routes/api.php
@@ -34,8 +34,8 @@ Route::middleware('auth')->group( function () {//Группа маршрутов
     Route::get('/products', [ProductController::class, 'index']);
     Route::post('/products', [ProductController::class, 'store']);
     Route::delete('/products/{id}', [ProductController::class, 'destroy']);
-
-    Route::get('/products/{id}', [ProductController::class, 'show']);
+    Route::post('/search', [ProductController::class, 'show']);
+    //Route::get('/products/{id}', [ProductController::class, 'show']);
     // Route::put('/products/{id}', [ProductController::class, 'update']);
 });
 
